[tool.poetry]
name = "bath"
version = "0.1.0"
description = ""
authors = ["Chris Bowdon <chris.bowdon@polecat.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pandas = "^1.3.4"
jupyterlab = "^3.2.4"
altair = "^4.1.0"
dvc = {extras = ["s3"], version = "^2.8.3"}
geopandas = "^0.10.2"
jupyterlab-git = "^0.34.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
